--- a/package.json
+++ b/package.json
@@ -1,33 +1,25 @@
 {
-  "name": "parcel-project-template",
-  "version": "1.1.0",
+  "name": "goit-js-hw-11",
+  "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "homepage": "https://mishynmykhailo.github.io/goit-js-hw-11/",
-  "scripts": {
-    "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://mishynmykhailo.github.io/goit-js-hw-11/"
-  },
-  "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://mishynmykhailo.github.io/goit-js-hw-11/issues"
-  },
-  "devDependencies": {
-    "parcel-bundler": "^1.12.5",
-    "parcel-plugin-handlebars-precompile": "^1.0.2",
-    "parcel-plugin-nuke-dist": "^1.0.1",
-    "posthtml-include": "^1.6.2",
-    "sass": "^1.32.8"
-  },
+  "main": ".posthtmlrc.js",
   "dependencies": {
     "axios": "^0.26.1",
     "notiflix": "^3.2.5",
     "simplelightbox": "^2.10.3"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MishynMykhailo/goit-js-hw-11.git"
+  },
+  "author": "Mishyn Mykhailo <misham18092001@gmail.com>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MishynMykhailo/goit-js-hw-11/issues"
+  },
+  "homepage": "https://github.com/MishynMykhailo/goit-js-hw-11"
 }
