--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "goit-js-hw-11",
-  "version": "1.0.0",
+  "name": "parcel-project-template",
+  "version": "1.1.0",
   "description": "",
-  "main": ".posthtmlrc.js",
-  "dependencies": {
-    "axios": "^0.26.1",
-    "notiflix": "^3.2.5",
-    "simplelightbox": "^2.10.3"
-  },
-  "devDependencies": {},
+  "main": "index.js",
+  "homepage": "https://mishynmykhailo.github.io/goit-js-hw-11",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "parcel src/*.html",
+    "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/MishynMykhailo/goit-js-hw-11.git"
+    "url": "git+https://mishynmykhailo.github.io/goit-js-hw-11/"
   },
-  "author": "Mishyn Mykhailo <misham18092001@gmail.com>",
-  "license": "ISC",
+  "keywords": [],
+  "author": "",
+  "license": "",
   "bugs": {
-    "url": "https://github.com/MishynMykhailo/goit-js-hw-11/issues"
+    "url": "https://mishynmykhailo.github.io/goit-js-hw-11/issues"
   },
-  "homepage": "https://github.com/MishynMykhailo/goit-js-hw-11"
+  "devDependencies": {
+    "parcel-bundler": "^1.12.5",
+    "parcel-plugin-handlebars-precompile": "^1.0.2",
+    "parcel-plugin-nuke-dist": "^1.0.1",
+    "posthtml-include": "^1.6.2",
+    "sass": "^1.32.8"
+  },
+  "dependencies": {
+    "axios": "^0.26.1",
+    "notiflix": "^3.2.5",
+    "simplelightbox": "^2.10.2"
+  }
 }
